@@ -200,6 +200,13 @@ Version 8.34 19-November-2013
        
 42. Added support for [[:<:]] and [[:>:]] as used in the BSD POSIX library to
     mean "start of word" and "end of word", respectively, as a transition aid.
+    
+43. A minimizing repeat of a class containing codepoints greater than 255 in
+    non-UTF 16-bit or 32-bit modes caused an internal error when PCRE was 
+    compiled to use the heap for recursion.
+    
+44. Got rid of some compiler warnings for unused variables when UTF but not UCP
+    is configured.
 
 
 Version 8.33 28-May-2013
